Add form and trend partial

--- a/app/views/tweeets/_feed.html.erb
+++ b/app/views/tweeets/_feed.html.erb
@@ -6,11 +6,10 @@
       </p>
     </figure>
     <div class="media-content">
-
+      <%= render "tweeets/form" %>
     </div>
   </article>
 
-</div>
 
 <% @tweeets.each do | tweeet | %>
   <div class="box">
@@ -47,3 +46,5 @@
     </article> 
   </div>
 <% end %>
+
+</div>
