Add devise user model

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,7 @@
    }
  }
 
- .notifications:not(:last-child) {
-   margin-bottom: 0;
- }
+ .notification:not(:last-child) {
+  margin-bottom: 0;
+}
+
