--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,7 @@
           <div class="field is-grouped">
             <p class="control"> 
               <%= link_to "New Tweeet", new_tweeet_path, class: "button is-info is-inverted" %>
+              <%= link_to "Sign Up", new_tweeet_path, class: "button is-info" %>
             </p>
           </div>
         </div>
