--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,20 +1,35 @@
-<h2>Resend confirmation instructions</h2>
+<div class="section">
+  <div class="container">
+    <div class="columns is-centered">
 
-<%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
-  <%= f.full_error :confirmation_token %>
+      <div class="column is-4">
+      <h2 class="title is-2">Resend confirmation instructions</h2>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email),
-                input_html: { autocomplete: "email" } %>
+      <%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+      <%= f.error_notification %>
+      <%= f.full_error :confirmation_token %>
+
+      <div class="field">
+        <div class="control">
+        <%= f.input :email, required: true, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), input_html: { class: "input"}, wrapper: false, label_html: { class: "label" } %>
+        </div>
+      </div>
+
+      <div class="field">
+        <div class="control">
+        <%= f.button :submit, "Resend confirmation instructions", class: "button is-info is-medium" %>
+        </div>
+      </div>
+
+      <% end %>
+
+      <br/>
+
+      <%= render "devise/shared/links" %>
+
+      </div>
+
+    </div>
   </div>
+</div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Resend confirmation instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
