--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,61 +2,66 @@
   <div class="container">
     <div class="columns is-centered">
 
-    <div class="column is-4">
-      <h2 class="title is-2">Sign Up</h2>
-
+      <div class="column is-4">
+      <h2 class="title is-2">Edit User</h2>
 
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= f.error_notification %>
 
-    <div class="field">
-      <div class="control">
-      <%= f.input :email, required: true, autofocus: true, input_html: { class: "input"}, wrapper: false, label_html: { class: "label" } %>
+      <div class="field">
+        <div class="control">
+        <%= f.input :name, required: true, autofocus: true, input_html: { class: "input"}, wrapper: false, label_html: { class: "label" } %>
+        </div>
       </div>
-    </div>
 
-
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
-
-
-    <div class="field">
-      <div class="control">
-      <%= f.input :password, hint: "leave it blank if you don't want to change it", required: false,input_html: { autocomplete: "new-password" } %>
+      <div class="field">
+        <div class="control">
+        <%= f.input :username, required: true, input_html: { class: "input"}, wrapper: false, label_html: { class: "label" }%>
+        </div>
       </div>
-    </div>
 
-    <div class="field">
-      <div class="control">
-      <%= f.input :password_confirmation, required: false, input_html: { autocomplete: "new-password" } %>
+      <div class="field">
+        <div class="control">
+        <%= f.input :email, required: true, input_html: { class: "input"}, wrapper: false, label_html: { class: "label" } %>
+        </div>
       </div>
-    </div>
 
-    <div class="field">
-      <div class="control">
-      <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true, input_html: { autocomplete: "current-password" } %>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+      <% end %>
+
+      <div class="field">
+        <div class="control">
+        <%= f.input :password, hint: "leave it blank if you don't want to change it", required: false,input_html: { class: "input"}, wrapper: false, label_html: { class: "label" } %>
+        </div>
       </div>
-    </div>
 
-
-    <div class="field">
-      <div class="control">
-      <%= f.button :submit, "Update" %>
+      <div class="field">
+        <div class="control">
+        <%= f.input :password_confirmation, required: false, input_html: { class: "input" }, wrapper: false, label_html: { class: "label" } %>
+        </div>
       </div>
-    </div>
 
+      <div class="field">
+        <div class="control">
+        <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true, input_html: { class: "input" }, wrapper: false, label_html: { class: "label" } %>
+        </div>
+      </div>
 
-    <% end %>
+      <div class="field">
+        <div class="control">
+        <%= f.button :submit, "Update", class: "button is-info is-medium" %>
+        </div>
+      </div>
 
-    <br/>
+      <% end %>
+
+      <br/>
     
 
-<h3>Cancel my account</h3>
+      <h3 class="label">Cancel my account</h3>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+      <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
       </div>
 
