--- a/app/views/tweeets/_feed.html.erb
+++ b/app/views/tweeets/_feed.html.erb
@@ -21,8 +21,8 @@
       </div>
       <div class="media-content"> 
         <div class="content"> 
-          <strong>Mar Bautista</strong><br/>
-          <small>@marilirulita</small><br/>
+          <strong><%= tweeet.user.name %></strong><br/>
+          <small><%= tweeet.user.username %> </small><br/>
           <p><%= tweeet.tweeet %> </p>
         </div>
 
