--- a/app/views/tweeets/new.html.erb
+++ b/app/views/tweeets/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Tweeet</h1>
-
-<%= render 'form', tweeet: @tweeet %>
-
-<%= link_to 'Back', tweeets_path %>
+<section class="section">
+  <div class="container"> 
+    <%= render 'form', tweeet: @tweeet %>
+    <%= link_to 'Back', tweeets_path %>
+  </div>
+</section>
