Add profile partial

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
               <% else %>
 
               <p class="control"> 
-                <%= link_to "Sign In", new_user_session_path, class: "button is-info" %>
+                <%= link_to "Log In", new_user_session_path, class: "button is-info" %>
               </p>
 
               <p class="control"> 
