--- a/app/views/tweeets/_feed.html.erb
+++ b/app/views/tweeets/_feed.html.erb
@@ -1,4 +1,5 @@
 <div class="column is-half">
+  <% if user_signed_in? %>
   <article class="media box">
     <figure class="media-left"> 
       <p class="image is-64x64"> 
@@ -9,6 +10,7 @@
       <%= render "tweeets/form" %>
     </div>
   </article>
+  <% end %>
 
 
 <% @tweeets.each do | tweeet | %>
@@ -26,6 +28,8 @@
           <p><%= tweeet.tweeet %> </p>
         </div>
 
+        <% if user_signed_in? %>
+
         <nav class="level">
           <div class="level-left is-mobile">
             <%= link_to tweeet, class: "level-item" do %>
@@ -42,6 +46,7 @@
 
           </div>
         </nav>
+        <% end %>
       </div>
     </article> 
   </div>
