--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
         <div class="navbar-item">
           <div class="field is-grouped">
             <p class="control"> 
-              <%= link_to "New Tweeet", new_tweeet_path, class: "button is-info is-inverted" %>
+              <%= link_to "New Tweeet", root_path, class: "button is-info is-inverted" %>
             </p>
 
             <% if user_signed_in? %>
