--- a/app/views/tweeets/_form.html.erb
+++ b/app/views/tweeets/_form.html.erb
@@ -2,7 +2,7 @@
 <%= f.error_notification %>
 <div class="field">
   <div class="control">
-    <%= f.input :tweeet, label: "Tweeet about it", input_html: { class: "textarea " }, wrapper: false, label_html: { class: "label" }, placeholder: "Compose a new Tweeet..." %>
+    <%= f.input :tweeet, label: "Tweeet about it", input_html: { class: "textarea " }, wrapper: false, label_html: { class: "label" }, placeholder: "Compose a new Tweeet...", autofocus: true %>
   </div>
 </div>
 <%= f.button :submit, class: "button is-info" %>
